# euc-doctor

./: .gitignore  README.md  euc-doctor.cmd  euc-doctor.ps1  euc_doctor.py  pyproject.toml
euc_doctor/: cli.py  display.py  health.py  interactive.py  models.py  registry.py  utils.py
euc_doctor/app_modules/: __init__.py  adobe_cc.py  anyconnect.py  chrome.py  common.py  dropbox.py  firefox.py  jamf_connect.py  onedrive.py  outlook.py  safari.py  slack.py  teams.py  vscode.py  zoom.py
euc_doctor/categories/: __init__.py  accounts.py  apps.py  cache.py  desktop.py  hardware.py  identity.py  mdm.py  network.py  performance.py  printing.py  security.py  storage.py  updates.py
euc_doctor/formatters/: __init__.py  jsonout.py  markdown.py
scripts/: bootstrap_macos.sh
tests/: test_registry.py
